--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: tomasrebro33/langtail
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "local"
+  tag: "standalone"
 
 imagePullSecrets: []
 nameOverride: ""
