--- a/charts/templates/secret.yaml
+++ b/charts/templates/secret.yaml
@@ -25,3 +25,11 @@ data:
   JWT_SIGNING_KEY: {{ .Values.JWT_SIGNING_KEY | toString | b64enc | quote }}
   SMTP_URL: {{ .Values.SMTP_URL | toString | b64enc | quote }}
   EMAIL_VERIFICATION_SECRET: {{ .Values.EMAIL_VERIFICATION_SECRET | toString | b64enc | quote }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "langtail.fullname" . }}-migrations-secret
+type: Opaque
+data:
+  DATABASE_URL: {{ .Values.MIGRATIONS_DATABASE_URL | toString | b64enc | quote }}
