--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -10,6 +10,12 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "standalone"
 
+migrationsImage:
+  repository: tomasrebro33/langtail
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "db-migrations"
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -124,6 +130,7 @@ IS_E2E_TEST: "false"
 
 # Secret ENVs
 DATABASE_URL: "postgresql://user:password@localhost:5432/database"
+MIGRATIONS_DATABASE_URL: "postgresql://user:password@localhost:5432/database"
 CLERK_SECRET_KEY: "default-clerk-secret-key"
 PRISMA_FIELD_ENCRYPTION_KEY: "default-prisma-field-encryption-key"
 TINYBIRD_API_TOKEN: "default-tinybird-api-token"
