Change folder structure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - 'charts/Chart.yaml'
+      - 'charts/*/Chart.yaml'
 jobs:
   release:
     name: Release Helm Chart
