--- a/charts/langtail/templates/secret.yaml
+++ b/charts/langtail/templates/secret.yaml
@@ -30,6 +30,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "langtail.fullname" . }}-migrations-secret
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "-10"
 type: Opaque
 data:
   DATABASE_URL: {{ .Values.MIGRATIONS_DATABASE_URL | toString | b64enc | quote }}
