use versioned docker tags and helm versions
+ continue cleaning up env vars in readme

--- a/charts/langtail/templates/mysql-migrations.yaml
+++ b/charts/langtail/templates/mysql-migrations.yaml
@@ -33,6 +33,8 @@ spec:
           envFrom:
             - secretRef:
                 name: {{ include "langtail.fullname" . }}-migrations-secret
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
