--- a/charts/langtail/templates/configmap.yaml
+++ b/charts/langtail/templates/configmap.yaml
@@ -3,11 +3,10 @@ kind: ConfigMap
 metadata:
   name: {{ include "langtail.fullname" . }}-configmap
 data:
-  EVALUATOR_URL: {{ .Values.EVALUATOR_URL | toString | quote }}
   SKIP_ENV_VALIDATION: {{ .Values.SKIP_ENV_VALIDATION | toString | quote }}
   SENTRY_ENABLED: {{ .Values.SENTRY_ENABLED | toString | quote }}
   AUTH_URL: {{ .Values.AUTH_URL | toString | quote }}
+  PROMPT_API_URL: {{ .Values.PROMPT_API_URL | toString | quote }}
   GITHUB_ID: {{ .Values.GITHUB_ID | toString | quote }}
   GOOGLE_ID: {{ .Values.GOOGLE_ID | toString | quote }}
   EMAIL_FROM: {{ .Values.EMAIL_FROM | toString | quote }}
-  IS_E2E_TEST: {{ .Values.IS_E2E_TEST | toString | quote }}
