default to internal service:port for PROMPT_API_URL, add LANGTAIL_LICENSE_KEY

--- a/charts/langtail/templates/secret.yaml
+++ b/charts/langtail/templates/secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "langtail.fullname" . }}-secret
 type: Opaque
 data:
+  LANGTAIL_LICENSE_KEY: {{ .Values.LANGTAIL_LICENSE_KEY | toString | b64enc | quote }}
   DATABASE_URL: {{ .Values.DATABASE_URL | toString | b64enc | quote }}
   PRISMA_FIELD_ENCRYPTION_KEY: {{ .Values.PRISMA_FIELD_ENCRYPTION_KEY | toString | b64enc | quote }}
   JWT_PRIVATE: {{ .Values.JWT_PRIVATE | toString | b64enc | quote }}
@@ -25,4 +26,5 @@ metadata:
     "helm.sh/hook-weight": "-10"
 type: Opaque
 data:
+LANGTAIL_LICENSE_KEY: {{ .Values.LANGTAIL_LICENSE_KEY | toString | b64enc | quote }}
   DATABASE_URL: {{ .Values.MIGRATIONS_DATABASE_URL | toString | b64enc | quote }}
