--- a/charts/langtail/templates/secret.yaml
+++ b/charts/langtail/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.manageSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -26,5 +27,6 @@ metadata:
     "helm.sh/hook-weight": "-10"
 type: Opaque
 data:
-LANGTAIL_LICENSE_KEY: {{ .Values.LANGTAIL_LICENSE_KEY | toString | b64enc | quote }}
+  LANGTAIL_LICENSE_KEY: {{ .Values.LANGTAIL_LICENSE_KEY | toString | b64enc | quote }}
   DATABASE_URL: {{ .Values.MIGRATIONS_DATABASE_URL | toString | b64enc | quote }}
+{{- end }}
